--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -46,7 +46,7 @@ p {
 .spinner > div {
 width: 18px;
 height: 18px;
-background-color: #000000;
+ background-color:  #E4AD50;
 
 border-radius: 100%;
 display: inline-block;
