--- a/src/components/website/Styles/FaqsBanner.scss
+++ b/src/components/website/Styles/FaqsBanner.scss
@@ -177,7 +177,7 @@
 /* accordion styling ends here */
 
 .downloadvesti{
-  background-color: #000000;
+   background-color:  #E4AD50;
   padding: 20px;
   border-radius:15px;
   width: 100%;
