--- a/src/components/website/Styles/FeesBanner.scss
+++ b/src/components/website/Styles/FeesBanner.scss
@@ -16,7 +16,7 @@
   color: #121243;
 }
 .downloadvesti{
-  background-color: #000000;
+   background-color:  #E4AD50;
   padding: 20px;
   border-radius:15px;
   width: 100%;
