--- a/src/components/website/Styles/HomeBanner1.scss
+++ b/src/components/website/Styles/HomeBanner1.scss
@@ -15,7 +15,7 @@ h3{
   padding-bottom: 9rem;
 }
 .btn-green {
-  background-color: #000000;
+   background-color:  #E4AD50;
   color: var(--main-color);
   padding: 0.8rem 2rem;
   border: thin solid transparent;
