--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   width: 95%;
 }
 .primary_bg_col {
-  background-color: #000000 !important;
+  background-color: #E4AD50 !important;
 }
 button {
   min-width: 200px;
