--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,7 +13,7 @@ $vesti-500: #97E373;
 $vesti-600: #7EC65C;
 $vesti-700: #000000;
 $vesti-800: #518C36;
-$vesti-900: #3E6F26;
+$vesti-900: #E4AD50;
 $vesti-901: #000080;
 $vesti-902: #121243;
 
