--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,28 @@ input {
   align-self: stretch;
   flex-grow: 0;
 }
+
+
+.goldbg {
+  position: relative;
+}
+
+.goldbg img {
+  position: absolute;
+}
+
+.goldbg-goldotdown {
+  bottom: 0;
+  left: 0;
+}
+
+.goldbg-golddotup {
+  top: 0;
+  right: 0;
+}
+
+
+
 .carousel {
   position: relative;
   width: 100%;
@@ -148,6 +170,8 @@ input {
   display: flex;
   overflow: hidden;
   position: relative;
+
+  margin-top: 100%;
   /* height: 150px; */
 }
 
@@ -186,7 +210,7 @@ input {
 .carousel-dots {
   display: flex;
   justify-content: center;
-  position: absolute;
+  position: absolute !important;
   bottom: 10px;
   width: 100%;
 }
