--- a/src/components/website/benefits/Benefits.scss
+++ b/src/components/website/benefits/Benefits.scss
@@ -32,7 +32,7 @@
             .card{
                 border: 1px solid #EAEAEA;
                 background-color: transparent;
-                height: 270px;
+                //height: 270px;
                 cursor: pointer;
                 transition: all .5s ease;
                 img{
