--- a/src/components/components.css
+++ b/src/components/components.css
@@ -10,9 +10,12 @@
   margin-left: -250px;
   overflow-y: auto;
   overflow-x: hidden;
-  background: #222;
   transition: all 0.5s ease;
   background-color: white;
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 50px;
+  font-size: 14px;
   border-right: 1px solid rgba(0, 0, 0, 0.1) !important;
   /* padding: 1em 1.5em !important;
   padding-left: 2em !important;
@@ -20,7 +23,6 @@
 }
 .side_box p {
   padding: 1em 0;
-  color: rgba(0, 0, 0, 1);
   opacity: 0.3;
 }
 
@@ -80,7 +82,7 @@
   width: 50px;
   height: 50px;
   cursor: pointer;
-  background: #F0F3EE;
+  background: #f0f3ee;
   border-radius: 50vw;
   display: flex;
   align-items: center;
@@ -91,7 +93,6 @@
 .search_cont_auto {
   max-width: 50%;
 }
-
 
 /* .toggle-menu{
   z-index: 15 !important;
