--- a/src/containers/Admin/Admin.css
+++ b/src/containers/Admin/Admin.css
@@ -769,7 +769,7 @@
 
 .tr_modal_box  h4 {
   font-size: 1.5em;
-  color: #8B8C8C !important;
+  color: #000000 !important;
 }
 
 .tr_modal_box h4 strong {
