--- a/src/variables.scss
+++ b/src/variables.scss
@@ -33,7 +33,7 @@ $gray-100 : #F9F8F9;
 $gray-200 : #F8F6F5;
 $gray-300 : #EAEAEA;
 $gray-400 : #CCCCCC;
-$gray-500 : #8B8C8C;
+$gray-500 : #000000;
 $gray-600 : #4F4F4F;
 $gray-700 : #2D2F30;
 $gray-800 : #151617;
@@ -179,7 +179,7 @@ $cyan-901 : #011c20;
 
 @mixin fontNormal($fs, $lh, $color) {
   @include font($fs, $lh, $color);
-  font-weight: 300;
+  
 }
 
 @mixin fontMedium($fs, $lh, $color) {
@@ -405,14 +405,15 @@ BREAKPOINTS
         }
       }
       &__balance{
-        margin: 0;
+        margin: 10px;
+
         @include rowflexx(center);
         gap: 10px;
 
         p:nth-child(1){
           margin: 0;
           margin-bottom: 2px;
-          @include fontSemiBold(2em,1em, #fff);
+          @include fontSemiBold(2em,1em, #000000);
           @include breakpoint(mobileonly){
             font-size: 1.5em;
           }
@@ -421,7 +422,7 @@ BREAKPOINTS
           }
         }
         i{
-          color: #fff;
+          color: #000000;
           transition: all .5s ease;
           font-size: 1.5em;
           
@@ -477,7 +478,7 @@ BREAKPOINTS
 }
 
 @mixin  card ($bkg, $color, $btn) {
-  height: 270px;
+  //height: 270px;
   cursor: pointer;
   @include colflex(flex-start, space-between);
 
